# bleak-esphome

./: .all-contributorsrc  .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  build_ext.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  poetry-upgrade.yml
docs/: api.md  architecture.md  conf.py  index.md  installation.md  troubleshooting.md  usage.md
examples/: connect_scanner.py  gatt_connect.py  setup_scanner.py
src/bleak_esphome/: __init__.py  _cancellation.py  _time_impl.pxd  _time_impl.pyx  connect.py  connection_manager.py  scanner.py  service.py  time.py
src/bleak_esphome/backend/: cache.py  characteristic.py  client.py  descriptor.py  device.py  scanner.pxd  scanner.py  service.py
tests/: __init__.py  conftest.py  test_cancellation.py  test_connect.py  test_connection_manager.py  test_init.py  test_main.py
tests/backend/: _helpers.py  conftest.py  test_cache.py  test_client.py  test_client_branches.py  test_device.py  test_scanner.py  test_scanner_benchmarks.py
